docs: make imgs not draggable

--- a/docs/src/theme/AnnouncementBar/styles.module.css
+++ b/docs/src/theme/AnnouncementBar/styles.module.css
@@ -20,7 +20,9 @@
   width: 500px;
   position: absolute;
   opacity: 0.3;
+  pointer-events: none;
 }
+
 .announcementBarLeftAdornment {
   left: -125px;
   top: -150px;
