--- a/docs/src/theme/AnnouncementBar/CloseButton/styles.module.css
+++ b/docs/src/theme/AnnouncementBar/CloseButton/styles.module.css
@@ -1,4 +1,7 @@
 .closeButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0;
   line-height: 0;
   z-index: 1;
@@ -6,4 +9,11 @@
 
 .closeButton svg {
   color: white;
+}
+
+@media screen and (max-width: 996px) {
+  .closeButton {
+    align-items: flex-start;
+    padding: 24px;
+  }
 }
