--- a/docs/src/css/overrides.css
+++ b/docs/src/css/overrides.css
@@ -18,10 +18,26 @@ table thead tr {
   border-bottom: 1px solid var(--ifm-table-border-color);
 }
 
-.compatibility table {
+.platform-compatibility table {
   display: table;
   width: 100%;
   table-layout: fixed;
+}
+
+.compatibility table {
+  display: table;
+  width: 100%;
+}
+
+.compatibility td {
+  padding: 0;
+  border: transparent 2px solid;
+  background: var(--ifm-background-color);
+}
+
+.compatibility th {
+  background: var(--ifm-background-color);
+  border: transparent 2px solid;
 }
 
 .header-github {
